src/styles/style.css
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
p,
ul {
  margin-top: 0;
}

/* VARIABLES */

:root {
  --white: #fff;
  --light1: #f5f4f0;
  --light2: #d7ccc0;
  --light3-brown: #b09a81;
  --grey-the-lightest: #e5e5e5;
  --grey-light: #908d8b;
  --grey-middle: #42413c;
  --grey-dark: #2a2626;
  --orange: #fe8a02;
  --orange-dark: #ea7600;
  --blue: #1085c5;
  --primary: var(--orange);
  --primary-additional: var(--orange-dark);
  --contrast: var(--blue);
  --the-lightest: var(--white);

  --content-max-width: 1110px;
}

/* FONTS */

@font-face {
  font-weight: 400;
  font-family: OpenSans;
  src: url(../assets/fonts/OpenSans-Regular.ttf);
}

@font-face {
  font-weight: 700;
  font-family: OpenSans;
  src: url(../assets/fonts/OpenSans-Bold.ttf);
}

@font-face {
  font-weight: 400;
  font-family: Neucha;
  src: url(../assets/fonts/Neucha-Regular.ttf);
}

html {
  font-size: 16px;
}

body {
  font-weight: 400;
  font-size: 1rem;
  font-family: OpenSans, sans-serif;
  line-height: 1.6em;
}

h1,
h2,
h3,
.lead,
.intro,
.number {
  font-weight: normal;
  font-family: Neucha, OpenSans, sans-serif;
}

h1 {
  font-size: 72px;
  line-height: 1.2em;
}

h2 {
  font-size: 60px;
  line-height: 1.2em;
}

nav h2 {
  font-size: 52px;
}

h3,
.intro {
  font-size: 34px;
  line-height: 1.2em;
}

h3.text-block {
  font-weight: 700;
  font-size: 16px;
  font-family: OpenSans, sans-serif;
}

.number {
  font-size: 64px;
  line-height: 1;
}

.lead {
  font-size: 28px;
}

.page-info-additional {
  font-size: 14px;
}

.small {
  font-size: 12px;
}

::placeholder,
::-ms-input-placeholder {
  font-weight: 400;
  font-size: small;
  font-family: OpenSans, sans-serif;
}

/* LAYOUT */

main {
  overflow: hidden;
}

header,
section,
nav,
footer {
  padding: 100px 0;
}

header > .inner,
section > .inner,
nav > .inner,
footer > .inner {
  max-width: var(--content-max-width);
  margin: 0 auto;
}

img {
  display: block;
  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

h3.text-block {
  margin-top: 100px;
  margin-bottom: 20px;
  padding: 6px 10px 4px 10px;
}

/* TEXTCONTAINER IN HEADER, SECTIONS, FOOTER */

.container {
  display: flex;
  flex-wrap: wrap;
}

.container > .box {
  flex: 1;
}

.container > .box:first-child {
  padding-right: 15px;
}

.container > .box:last-child {
  padding-left: 15px;
}

/* HEADER */

.story {
  overflow: hidden;
}

.story .inner {
  position: relative;
}

.story .container {
  margin-top: 195px;
}

.story h1 {
  position: relative;
  z-index: 1;
}

.story img {
  position: absolute;
  top: -55px;
  right: -270px;
  z-index: 0;

  height: 525px;
}

/* button-link in header */

a.more:link {
  display: inline-block;
  margin-top: 20px;
  padding: 12px 24px;

  color: var(--white);
  font-weight: bold;
  text-decoration: none;

  background-color: var(--primary);
}

a.more:visited {
  background-color: var(--primary-additional);
}

a.more:hover,
a.more:active,
a.more:focus {
  background-color: var(--primary-additional);
}

/* SECTION VIDEO */

.video {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: -200px;

  text-align: center;
}

.video .inner {
  position: relative;
}

.video h2 {
  margin-bottom: 30px;
}

.video p {
  margin-top: 0;
  margin-bottom: 30px;
}

.video iframe {
  display: block;
  max-width: 100%;

  border: 0;
  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

/* SECTION NAVIGATION */

nav .inner {
  display: grid; 
  grid-column-gap: 30px;
  grid-row-gap: 20px;
  grid-template-columns: repeat(3, 1fr);

  margin-top: 100px;
}

nav h2 {
  margin: 0;
}

.number {
  margin-bottom: 40px;
}

.nav-box {
  display: block;
  padding: 24px;

  color: var(--grey-dark);
  text-decoration: none;

  background-color: var(--light1);
}

.nav-box h3 {
  color: var(--primary);
}

.nav-box:hover,
.nav-box:hover h3 {
  color: var(--white);
  background-color: var(--primary);
}

/* SECTIONS COMMON */

.box h2 {
  padding: 0;
  margin: 0;
}

.lead {
  margin: 0;
  padding: 0;
}

p.intro{
  margin-top: 20px;
}

p.intro:last-child {
  margin-bottom: 0;
}

/* FOOTER */

footer .container {
  padding: 0 55px;
}

footer .box:first-child {
  padding-top: 55px;
  padding-bottom: 55px;
}

footer .box:last-child {
  padding: 38px 0 40px 15px;
}

.page-info-additional {
  margin-top: 76px;

  text-align: center;
}

footer h3 {
  margin-bottom: 0;
}

/* FOOTER formular */

footer label {
  display: block;
  margin-bottom: 12px;
}

.send-email {
  display: flex;
  flex-wrap: wrap;
}

input[type="email"] {
  flex: 1 1 auto;
  height: 50px;
  padding: 15px;

  border: 0;
}

.send-email button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 70px;
  height: 50px;

  border: 0;
  cursor: pointer;
}

footer form p:last-child {
  margin: 0;
}

/* FOOTER links */

form a:link,
form a:visited {
  color: var(--white);
}

form a:hover,
form a:active,
form a:focus {
  color: var(--primary);
}

.page-info-additional a:link,
.page-info-additional a:visited {
  color: var(--blue);
}

.page-info-additional a:hover,
.page-info-additional a:active,
.page-info-additional a:focus {
  color: var(--grey-dark);
}

/* COLORS AND BACKGROUND-IMAGES */

html {
  background-color: var(--grey-the-lightest);
}

body {
  color: var(--grey-dark);
}

button {
  color: var(--white);

  background-color: var(--primary);
}

button:hover {
  background-color: var(--primary-additional);
}

footer {
  background-color: var(--the-lightest);
}

footer .container {
  color: var(--the-lightest);

  background-color: var(--grey-middle);
}

/* THEMES */

.theme-color-white {
  background-color: var(--white);
}

.theme-color-default,
.theme-color-invert {
  background-image: url(../assets/img/background-pattern.png);
  background-repeat: no-repeat;
  background-size: cover;
}

/* --- */

.theme-color-default {
  background-color: var(--light1);
}

.theme-color-default .lead {
  color: var(--grey-light);
}

.theme-color-default h3.text-block {
  color: var(--white);

  background-color: var(--light3-brown);
}

/* --- */

.theme-color-invert {
  color: var(--white);

  background-color: var(--light3-brown);
}

.theme-color-invert .lead {
  color: var(--light2);
}

.theme-color-invert h3.text-block {
  color: var(--light3-brown);

  background-color: var(--white);
}

/* --- */

.theme-color-dark {
  background-color: var(--grey-middle);
}

.theme-color-dark h2 {
  color: var(--white);
}

/* ADDITIONAL CLASSES FOR COLORS */
::placeholder,
::-ms-input-placeholder  {
  color: var(--grey-light);
  opacity: 1;
}

.emphasis {
  color: var(--primary);
}

